--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "dependencies": {
     "hono": "^4.6.5",
-    "@hono/node-server": "^1.12.0",
+    "@hono/node-server": "1.10.0",
     "nanoid": "^5.0.7"
   },
   "scripts": {
